# py-ipc

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  lint.yml  test.yml
examples/: client.py  server.py
examples/echo_server/: client.py  server.py
examples/rpc/: client.py  server.py
examples/rpc/subclass/: client.py  server.py
examples/subclass/: client.py  server.py
examples/subclasses/: client.py  server.py
ipc/: __init__.py
ipc/core/: __init__.py  base_connection.py  client.py  connection.py  errors.py  event_manager.py  protocol.py  server.py  types.py  utils.py
ipc/core/mixins/: context_manager.py  event_manager.py
ipc/rpc/: __init__.py  client.py  client_commands.py  commands.py  context.py  errors.py  server.py  types.py  utils.py
tests/: conftest.py  test_client.py  test_events.py  test_rpc_client.py  test_rpc_server.py  test_rpc_utils.py  test_server.py  test_utils.py
