[tool.black]
line-length = 90
target-version = ['py37']
skip-string-normalization = true

[tool.pyright]
include = ['ipc/**', 'examples/**']
pythonVersion = "3.7"

[tool.poetry]
name = "py-ipc"
version = "0.1.0"
description = ""
authors = ["Tinoy Thomas <tinoytpm1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
orjson = { version = "^3.6.8", optional = true }
uvloop = { version = "^0.16.0", optional = true }


[tool.poetry.extras]
speed = ['orjson', 'uvloop']

[tool.poetry.dev-dependencies]
black = "^22.3.0"
setuptools = "^62.3.2"
pyright = "^1.1.252"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
