[tool.black]
line-length = 90
target-version = ['py37']
skip-string-normalization = true

[tool.pyright]
include = ['ipc/**', 'examples/**']
pythonVersion = "3.7"

[tool.poetry]
name = "py-ipc"
version = "0.1.0"
description = ""
authors = ["Tinoy Thomas <tinoytpm1@gmail.com>"]

[tool.pytest.ini_options]
asyncio_mode = 'strict'

[tool.poetry.dependencies]
python = "^3.7"
orjson = { version = "3.6.8", optional = true }
uvloop = { version = "^0.16.0", optional = true }

[tool.poetry.dev-dependencies]
setuptools = "^62.3.3"
black = "^22.3.0"
pyright = "^1.1.252"
typing-extensions = "^4.2.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"

[tool.poetry.extras]
speed = ['orjson', 'uvloop']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
